fixes <hrMain> bug, adds scrollbar for TEI view

--- a/public/css/nineteenth.scss
+++ b/public/css/nineteenth.scss
@@ -149,9 +149,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100% - 60px);
+    height: 1060px;
     color: $document-text-color;
     font-size: 11px;
+    overflow: auto;
 }
 
 .logoTitle{
@@ -647,6 +648,7 @@ flex-wrap: wrap;
     width: calc(100% - 200px);
     display: flex;
     flex-wrap: wrap;
+    height: 100%;
 }
 
 @media (max-width: 1000px){
